Fix overlap issue with message slider
The two text sliders were overlapping with each other so just had to
merge them both as one.

--- a/project/project/static/css/marquee.css
+++ b/project/project/static/css/marquee.css
@@ -29,13 +29,9 @@
 .marquee span {
     display: inline-block;
     padding-left: 100%;
-    animation: marquee 100s linear infinite;
+    animation: marquee 200s linear infinite;
 }
 
-.marquee2 span {
-    animation-delay: 50s;
-}
-  
 @keyframes marquee {
 0% {
     transform: translate(0, 0);
